# ruvector

./: .gitignore  README.md
crates/ruvector-cli/: Cargo.toml
examples/exo-ai-2025/research/01-neuromorphic-spiking/: BREAKTHROUGH_HYPOTHESIS.md  Cargo.toml  RESEARCH.md  benchmarks.md
examples/exo-ai-2025/research/01-neuromorphic-spiking/benches/: spike_benchmark.rs
examples/exo-ai-2025/research/01-neuromorphic-spiking/examples/: quick_bench.rs
examples/exo-ai-2025/research/01-neuromorphic-spiking/src/: bit_parallel_spikes.rs  lib.rs  spiking_consciousness.rs
examples/exo-ai-2025/research/02-quantum-superposition/: BIBLIOGRAPHY.bib  BREAKTHROUGH_HYPOTHESIS.md  Cargo.toml  EXECUTIVE_SUMMARY.md  EXPERIMENTAL_PROTOCOLS.md  README.md  RESEARCH.md  RESEARCH_INDEX.md  VISUAL_FRAMEWORK.md  mathematical_framework.md
examples/exo-ai-2025/research/02-quantum-superposition/benches/: cognitive_benchmarks.rs
examples/exo-ai-2025/research/02-quantum-superposition/examples/: attention_collapse.rs  linda_problem.rs  prisoners_dilemma.rs
examples/exo-ai-2025/research/02-quantum-superposition/src/: collapse_attention.rs  interference_decision.rs  lib.rs  quantum_cognitive_state.rs  simd_ops.rs
examples/exo-ai-2025/research/03-time-crystal-cognition/: BREAKTHROUGH_HYPOTHESIS.md  Cargo.toml  EXECUTIVE_SUMMARY.md  README.md  RESEARCH.md  mathematical_framework.md
examples/exo-ai-2025/research/03-time-crystal-cognition/benches/: time_crystal_bench.rs
examples/exo-ai-2025/research/03-time-crystal-cognition/src/: discrete_time_crystal.rs  floquet_cognition.rs  lib.rs  simd_optimizations.rs  temporal_memory.rs
examples/exo-ai-2025/research/04-sparse-persistent-homology/: BREAKTHROUGH_HYPOTHESIS.md  Cargo.toml  README.md  RESEARCH.md  complexity_analysis.md
examples/exo-ai-2025/research/04-sparse-persistent-homology/benches/: sparse_homology_bench.rs
examples/exo-ai-2025/research/04-sparse-persistent-homology/src/: apparent_pairs.rs  lib.rs  simd_filtration.rs  simd_matrix_ops.rs  sparse_boundary.rs  streaming_homology.rs
examples/exo-ai-2025/research/05-memory-mapped-neural-fields/: BREAKTHROUGH_HYPOTHESIS.md  Cargo.toml  EXECUTIVE_SUMMARY.md  README.md  RESEARCH.md  architecture.md
examples/exo-ai-2025/research/05-memory-mapped-neural-fields/benches/: neural_field_bench.rs  prefetch_bench.rs
examples/exo-ai-2025/research/05-memory-mapped-neural-fields/examples/: basic_usage.rs  petabyte_scale.rs
examples/exo-ai-2025/research/05-memory-mapped-neural-fields/src/: lazy_activation.rs  lib.rs  mmap_neural_field.rs  prefetch_prediction.rs  tiered_memory.rs
examples/exo-ai-2025/research/06-federated-collective-phi/: BREAKTHROUGH_HYPOTHESIS.md  Cargo.toml  README.md  RESEARCH.md  theoretical_framework.md
examples/exo-ai-2025/research/06-federated-collective-phi/src/: consciousness_crdt.rs  distributed_phi.rs  federation_emergence.rs  lib.rs  qualia_consensus.rs
examples/exo-ai-2025/research/07-causal-emergence/: BREAKTHROUGH_HYPOTHESIS.md  Cargo.toml  README.md  RESEARCH.md  SUMMARY.md  mathematical_framework.md
examples/exo-ai-2025/research/07-causal-emergence/benches/: causal_emergence_bench.rs
examples/exo-ai-2025/research/07-causal-emergence/src/: causal_hierarchy.rs  coarse_graining.rs  effective_information.rs  emergence_detection.rs  lib.rs
examples/exo-ai-2025/research/08-meta-simulation-consciousness/: BREAKTHROUGH_HYPOTHESIS.md  Cargo.toml  INDEX.md  README.md  RESEARCH.md  RESEARCH_SUMMARY.md  complexity_analysis.md
examples/exo-ai-2025/research/08-meta-simulation-consciousness/benches/: meta_sim_benchmarks.rs
examples/exo-ai-2025/research/08-meta-simulation-consciousness/src/: closed_form_phi.rs  ergodic_consciousness.rs  hierarchical_phi.rs  lib.rs  meta_sim_awareness.rs  simd_ops.rs
examples/exo-ai-2025/research/09-hyperbolic-attention/: BREAKTHROUGH_HYPOTHESIS.md  Cargo.toml  README.md  RESEARCH.md  RESEARCH_SUMMARY.md  geometric_foundations.md
examples/exo-ai-2025/research/10-thermodynamic-learning/: BREAKTHROUGH_HYPOTHESIS.md  Cargo.toml  README.md  RESEARCH.md  SUMMARY.txt  physics_foundations.md
examples/exo-ai-2025/research/11-conscious-language-interface/: ARCHITECTURE.md  BENCHMARK_RESULTS.md  Cargo.toml  README.md
examples/ultra-low-latency-sim/: Cargo.toml
examples/ultra-low-latency-sim/src/: bit_parallel.rs  closed_form.rs  hierarchical.rs  lib.rs  main.rs  simd_ops.rs  verify.rs
examples/vibecast-7sense/: .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/vibecast-7sense/benches/: api_benchmark.rs  clustering_benchmark.rs  embedding_benchmark.rs  hnsw_benchmark.rs  utils.rs
examples/vibecast-7sense/crates/sevensense-analysis/: Cargo.toml  README.md
examples/vibecast-7sense/crates/sevensense-api/: Cargo.toml  README.md
examples/vibecast-7sense/crates/sevensense-audio/: Cargo.toml  README.md
examples/vibecast-7sense/crates/sevensense-benches/: Cargo.toml  README.md
examples/vibecast-7sense/crates/sevensense-core/: Cargo.toml  README.md
examples/vibecast-7sense/crates/sevensense-embedding/: Cargo.toml  README.md
examples/vibecast-7sense/crates/sevensense-interpretation/: Cargo.toml  README.md
examples/vibecast-7sense/crates/sevensense-learning/: Cargo.toml  README.md
examples/vibecast-7sense/crates/sevensense-vector/: Cargo.toml  README.md
examples/vibecast-7sense/docs/: DDD-IMPLEMENTATION-PLAN.md
examples/vibecast-7sense/docs/adr/: ADR-001-system-architecture.md  ADR-002-ddd-bounded-contexts.md  ADR-003-security-architecture.md  ADR-004-performance-optimization.md  ADR-005-self-learning-hooks.md  ADR-006-data-architecture.md  ADR-007-ml-inference-pipeline.md  ADR-008-api-design.md  ADR-009-visualization-ui.md
examples/vibecast-7sense/scripts/: Cargo.toml  performance_report.rs  run_benchmarks.sh
examples/vibecast-7sense/tests/: Cargo.toml  lib.rs
examples/vibecast-7sense/tests/fixtures/: mod.rs
examples/vibecast-7sense/tests/integration/: analysis_test.rs  api_test.rs  audio_test.rs  embedding_test.rs  interpretation_test.rs  mod.rs  vector_test.rs
examples/vibecast-7sense/tests/mocks/: mod.rs
(+256 files in other folders)
