[workspace]
resolver = "2"
members = [
    "crates/sevensense-core",
    "crates/sevensense-audio",
    "crates/sevensense-embedding",
    "crates/sevensense-vector",
    "crates/sevensense-learning",
    "crates/sevensense-analysis",
    "crates/sevensense-interpretation",
    "crates/sevensense-api",
    "crates/sevensense-benches",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
homepage = "https://github.com/ruvnet/ruvector/tree/main/examples/vibecast-7sense"
authors = ["7sense Team", "rUv"]

[workspace.dependencies]
# Core dependencies
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Tracing and telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.24"
opentelemetry = "0.23"
opentelemetry_sdk = "0.23"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Audio processing
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"

# ML and embeddings
ndarray = { version = "0.15", features = ["serde"] }
ort = "2.0.0-rc.11"

# Vector database
qdrant-client = "1.10"

# API framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
test-case = "3.3"

# Benchmarking utilities
ordered-float = "4.2"
half = "2.4"

# Internal crates (path for local dev, version for crates.io)
sevensense-core = { path = "crates/sevensense-core", version = "0.1.0" }
sevensense-audio = { path = "crates/sevensense-audio", version = "0.1.0" }
sevensense-embedding = { path = "crates/sevensense-embedding", version = "0.1.0" }
sevensense-vector = { path = "crates/sevensense-vector", version = "0.1.0" }
sevensense-learning = { path = "crates/sevensense-learning", version = "0.1.0" }
sevensense-analysis = { path = "crates/sevensense-analysis", version = "0.1.0" }
sevensense-interpretation = { path = "crates/sevensense-interpretation", version = "0.1.0" }
sevensense-api = { path = "crates/sevensense-api", version = "0.1.0" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true

# Benchmark profile - optimized for performance measurement
[profile.bench]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
