[package]
name = "performance-report"
version = "0.1.0"
edition = "2021"
description = "Performance report generator for 7sense benchmarks"
publish = false

[[bin]]
name = "performance-report"
path = "performance_report.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
