[package]
name = "neuromorphic-spiking"
version = "0.1.0"
edition = "2021"
authors = ["RuvAI Research Team"]
description = "Nobel-level neuromorphic spiking neural networks with consciousness computation"
license = "MIT"

[workspace]
# Standalone workspace for independent compilation

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "neuromorphic_spiking"
path = "src/lib.rs"

[[bench]]
name = "spike_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
