[workspace]
# This allows the crate to be compiled standalone

[package]
name = "quantum-cognitive-superposition"
version = "0.1.0"
edition = "2021"
authors = ["AI Research Collective"]
description = "Cognitive Amplitude Field Theory (CAFT) - Classical simulation of quantum cognition"
license = "MIT"

[dependencies]
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cognitive_benchmarks"
harness = false

[lib]
name = "quantum_cognition"
path = "src/lib.rs"

[[example]]
name = "linda_problem"
path = "examples/linda_problem.rs"

[[example]]
name = "prisoners_dilemma"
path = "examples/prisoners_dilemma.rs"

[[example]]
name = "attention_collapse"
path = "examples/attention_collapse.rs"
