# Standalone workspace for isolated compilation
[workspace]

[package]
name = "demand-paged-cognition"
version = "0.1.0"
edition = "2021"
authors = ["DPNC Research Team"]
description = "Memory-mapped neural fields for petabyte-scale cognition"
license = "MIT"
keywords = ["neural-networks", "memory-mapping", "tiered-storage", "machine-learning", "ai"]
categories = ["science", "memory-management", "machine-learning"]

[dependencies]
# Memory mapping
memmap2 = "0.9"

# Async I/O (for future prefetch optimization)
tokio = { version = "1.35", features = ["full"], optional = true }

# Serialization (for checkpointing)
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }

# Metrics
metrics = { version = "0.21", optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[features]
default = []
async = ["tokio"]
serialization = ["serde", "bincode"]
metrics = ["dep:metrics"]
full = ["async", "serialization", "metrics"]

[[bench]]
name = "neural_field_bench"
harness = false

[[bench]]
name = "prefetch_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[lib]
name = "demand_paged_cognition"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "petabyte_scale"
path = "examples/petabyte_scale.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
