[package]
name = "meta-sim-consciousness"
version = "0.1.0"
edition = "2021"
authors = ["Ruvector Research Team"]
description = "Nobel-level breakthrough: O(N³) integrated information for ergodic systems"
license = "MIT"

# Allow standalone compilation
[workspace]

[dependencies]
rayon = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "meta_sim_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
