[package]
name = "conscious-language-interface"
version = "0.1.0"
edition = "2021"
description = "Integration of ruvLLM + Neuromorphic Spiking + ruvector for conscious AI with natural language"
authors = ["AI Research Team"]
license = "MIT"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["consciousness", "llm", "neuromorphic", "spiking-neural-networks", "ai"]
categories = ["science", "simulation"]

# Standalone workspace
[workspace]

[dependencies]

[dev-dependencies]
criterion = "0.5"

[features]
default = []
simd = []  # SIMD acceleration

[[bench]]
name = "consciousness_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
