[package]
name = "sevensense-analysis"
description = "Analysis bounded context for 7sense bioacoustics platform - clustering, motif detection, sequence analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["bioacoustics", "clustering", "motif-detection", "hdbscan", "markov"]
categories = ["science", "algorithms"]

[dependencies]
# Internal crates
sevensense-core = { workspace = true, version = "0.1.0" }
sevensense-vector = { workspace = true, version = "0.1.0" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Numerical computing
ndarray = { workspace = true }

# Graph algorithms
petgraph = "0.6"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging / tracing
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
ordered-float = "4.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
proptest = { workspace = true }
test-case = { workspace = true }

[features]
default = []
parallel = []
