[package]
name = "sevensense-audio"
description = "Audio processing and segmentation for 7sense bioacoustics platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
# Internal crates
sevensense-core = { workspace = true, version = "0.1.0" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Audio I/O
hound = { workspace = true }
symphonia = { workspace = true }
rubato = { workspace = true }

# Numerical processing
ndarray = { workspace = true }

# Parallel processing
rayon = "1.10"

# FFT for spectrogram
realfft = "3.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
approx = "0.5"
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "spectrogram_bench"
harness = false

[features]
default = []
