[package]
name = "sevensense-learning"
description = "GNN-based learning and embedding refinement for 7sense bioacoustics platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
# Internal crates
sevensense-core = { workspace = true, version = "0.1.0" }
sevensense-vector = { workspace = true, version = "0.1.0" }

# Core dependencies
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Tracing
tracing = { workspace = true }

# ML and numerical computing
ndarray = { workspace = true }
ndarray-rand = "0.14"

# Graph operations
petgraph = "0.6"

# Parallel processing
rayon = "1.10"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
approx = "0.5"

[features]
default = []

[[bench]]
name = "gnn_benchmark"
harness = false
